@@ -192,6 +192,7 @@ namespace BDArmory.Weapons.Missiles
 
         public override void OnFixedUpdate()
         {
+            base.OnFixedUpdate();
             if (HasFired && !HasExploded)
             {
                 UpdateGuidance();
@@ -630,7 +631,7 @@ namespace BDArmory.Weapons.Missiles
 
                 if (Vector3.Angle(aamTarget - vessel.CoM, vessel.transform.forward) > maxOffBoresight * 0.75f)
                 {
-                    Debug.LogFormat("[BDArmory.BDModularGuidance]: Missile with Name={0} has exceeded the max off boresight, checking missed target ", vessel.vesselName);
+                    if (BDArmorySettings.DEBUG_MISSILES) Debug.LogFormat("[BDArmory.BDModularGuidance]: Missile with Name={0} has exceeded the max off boresight, checking missed target ", vessel.vesselName);
                     aamTarget = TargetPosition;
                 }
                 DrawDebugLine(vessel.CoM, aamTarget);
@@ -654,7 +655,7 @@ namespace BDArmory.Weapons.Missiles
 
                     if (targetViewAngle > maxOffBoresight)
                     {
-                        Debug.Log("[BDArmory.BDModularGuidance]: AGM Missile guidance failed - target out of view");
+                        if (BDArmorySettings.DEBUG_MISSILES) Debug.Log("[BDArmory.BDModularGuidance]: AGM Missile guidance failed - target out of view");
                         guidanceActive = false;
                     }
                 }
@@ -684,15 +685,13 @@ namespace BDArmory.Weapons.Missiles
         private void CheckMiss(Vector3 targetPosition)
         {
             if (HasMissed) return;
+            if (MissileState != MissileStates.PostThrust) return;
             // if I'm to close to my vessel avoid explosion
             if ((vessel.CoM - SourceVessel.CoM).magnitude < 4 * DetonationDistance) return;
-            // if I'm getting closer to  my target avoid explosion
+            // if I'm getting closer to my target avoid explosion
             if ((vessel.CoM - targetPosition).sqrMagnitude >
                 (vessel.CoM + (vessel.Velocity() * Time.fixedDeltaTime) - (targetPosition + (TargetVelocity * Time.fixedDeltaTime))).sqrMagnitude) return;
-
-            if (MissileState != MissileStates.PostThrust) return;
-
-            Debug.Log("[BDArmory.BDModularGuidance]: Missile CheckMiss showed miss for " + vessel.vesselName + " with target at " + (targetPosition - vessel.CoM).ToString("0.0"));
+            if (BDArmorySettings.DEBUG_MISSILES) Debug.Log($"[BDArmory.BDModularGuidance]: Missile CheckMiss showed miss for {vessel.vesselName} ({SourceVessel}) with target at {targetPosition - vessel.CoM:G3}");
 
             var pilotAI = VesselModuleRegistry.GetModule<BDModulePilotAI>(vessel); // Get the pilot AI if the  missile has one.
             if (pilotAI != null)
@@ -711,7 +710,7 @@ namespace BDArmory.Weapons.Missiles
 
         private void ResetMissile()
         {
-            Debug.Log("[BDArmory.BDModularGuidance]: Resetting missile " + vessel.vesselName);
+            if (BDArmorySettings.DEBUG_MISSILES) Debug.Log("[BDArmory.BDModularGuidance]: Resetting missile " + vessel.vesselName);
             heatTarget = TargetSignatureData.noTarget;
             vrd = null;
             radarTarget = TargetSignatureData.noTarget;
@@ -731,7 +730,7 @@ namespace BDArmory.Weapons.Missiles
             MissileState = MissileStates.Idle;
             if (mfChecked && weaponManager != null)
             {
-                Debug.Log("[BDArmory.BDModularGuidance]: disabling target lock for " + vessel.vesselName);
+                if (BDArmorySettings.DEBUG_MISSILES) Debug.Log("[BDArmory.BDModularGuidance]: disabling target lock for " + vessel.vesselName);
                 weaponManager.guardFiringMissile = false; // Disable target lock.
                 mfChecked = false;
             }
@@ -743,7 +742,7 @@ namespace BDArmory.Weapons.Missiles
 
             if (MissileState == MissileStates.PostThrust && (vessel.LandedOrSplashed || vessel.Velocity().magnitude < 10f))
             {
-                Debug.Log("[BDArmory.BDModularGuidance]: Missile CheckMiss showed miss for " + vessel.vesselName);
+                if (BDArmorySettings.DEBUG_MISSILES) Debug.Log("[BDArmory.BDModularGuidance]: Missile CheckMiss showed miss for " + vessel.vesselName);
 
                 var pilotAI = VesselModuleRegistry.GetModule<BDModulePilotAI>(vessel); // Get the pilot AI if the  missile has one.
                 if (pilotAI != null)
@@ -764,6 +763,7 @@ namespace BDArmory.Weapons.Missiles
 
         public void GuidanceSteer(FlightCtrlState s)
         {
+            FloatingOriginCorrection();
             debugString.Length = 0;
             if (guidanceActive && MissileReferenceTransform != null && _velocityTransform != null)
             {
@@ -774,7 +774,7 @@ namespace BDArmory.Weapons.Missiles
                 }
                 if (mfChecked && weaponManager != null && !weaponManager.guardFiringMissile)
                 {
-                    Debug.Log("[BDArmory.BDModularGuidance]: enabling target lock for " + vessel.vesselName);
+                    if (BDArmorySettings.DEBUG_MISSILES) Debug.Log("[BDArmory.BDModularGuidance]: enabling target lock for " + vessel.vesselName);
                     weaponManager.guardFiringMissile = true; // Enable target lock.
                 }
 
@@ -928,7 +928,7 @@ namespace BDArmory.Weapons.Missiles
         /// </summary>
         public void ExecuteNextStage()
         {
-            Debug.LogFormat("[BDArmory.BDModularGuidance]: Executing next stage {0} for {1}", _nextStage, vessel.vesselName);
+            if (BDArmorySettings.DEBUG_MISSILES) Debug.LogFormat("[BDArmory.BDModularGuidance]: Executing next stage {0} for {1}", _nextStage, vessel.vesselName);
             vessel.ActionGroups.ToggleGroup(
                 (KSPActionGroup)Enum.Parse(typeof(KSPActionGroup), "Custom0" + (int)_nextStage));
 
@@ -1142,6 +1142,7 @@ namespace BDArmory.Weapons.Missiles
         {
             if (HasExploded || !HasFired) return;
             if (SourceVessel == null) SourceVessel = vessel;
+            if (BDArmorySettings.DEBUG_MISSILES) Debug.Log($"[BDArmory.BDModularGuidance]: Detonating missile {vessel.vesselName} ({SourceVessel})");
 
             if (StageToTriggerOnProximity != 0)
             {
